--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "ca-developers-guide",
-  "version": "0.1.0",
+  "name": "ng-rise",
+  "version": "0.1.1",
   "dependencies": {
     "angular": "~1.3.13",
     "angular-route": "~1.3.13"
