--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-app-template",
-  "version": "0.1.0",
+  "name": "ng-rise",
+  "version": "0.1.1",
   "devDependencies": {
     "bower": "~1.3.12",
     "grunt": "~0.4.5",
