--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,13 @@
   "name": "ng-rise",
   "version": "0.1.1",
   "dependencies": {
-    "angular": "~1.3.13",
-    "angular-route": "~1.3.13"
+    "angular": "~1.3.x",
+    "angular-route": "~1.3.x"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.3.15"
+  },
+  "resolutions": {
+    "angular": "~1.3.x"
   }
 }
