--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "ng-rise",
   "version": "0.1.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rafaelcamargo/ng-rise"
+  },
   "devDependencies": {
     "bower": "~1.3.12",
     "grunt": "~0.4.5",
@@ -8,9 +12,9 @@
     "grunt-cli": "~v0.1.13",
     "grunt-concat-in-order": "^0.1.6",
     "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-stylus": "~0.20.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-http-server": "^1.2.0",
-    "grunt-contrib-stylus": "~0.20.0",
     "grunt-karma": "~0.10.1",
     "jasmine-core": "~2.3.0",
     "karma": "~0.12.31",
@@ -18,6 +22,7 @@
     "karma-coverage": "~0.3.1",
     "karma-jasmine": "~0.3.5",
     "karma-ng-html2js-preprocessor": "^0.1.2",
-    "karma-phantomjs-launcher": "~0.1.4"
+    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-chrome-launcher": "^0.1.12"
   }
 }
