--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-http-server": "^1.2.0",
     "grunt-karma": "~0.10.1",
+    "grunt-phantomcss": "git://github.com/micahgodbolt/grunt-phantomcss.git",
     "jasmine-core": "~2.3.0",
     "karma": "~0.12.31",
+    "karma-chrome-launcher": "^0.1.12",
     "karma-cli": "0.0.4",
     "karma-coverage": "~0.3.1",
     "karma-jasmine": "~0.3.5",
     "karma-ng-html2js-preprocessor": "^0.1.2",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "karma-chrome-launcher": "^0.1.12"
+    "karma-phantomjs-launcher": "~0.1.4"
   }
 }
