--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-rise",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/rafaelcamargo/ng-rise"
@@ -19,7 +19,7 @@
     "grunt-concat-in-order": "^0.1.6",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-stylus": "~0.20.0",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-http-server": "^1.2.0",
     "grunt-karma": "^0.11.0",
