--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "ng-rise",
   "version": "0.3.0",
+  "description": "Rise a lite AngularJS application in minutes",
+  "author": "Rafael Camargo <contato@rafaelcamargo.com>",
   "repository": {
     "type": "git",
     "url": "https://github.com/rafaelcamargo/ng-rise"
   },
+  "license": "MIT",
   "dependencies": {
     "angular": "^1.4.1",
     "angular-route": "^1.4.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.1",
-    "bower": "~1.3.12",
-    "casperjs": "^1.1.0-beta3",
     "grunt": "^0.4.5",
-    "grunt-bower-install-simple": "^1.1.0",
-    "grunt-cli": "~v0.1.13",
     "grunt-concat-in-order": "^0.1.6",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jshint": "^0.11.2",
@@ -25,18 +24,10 @@
     "grunt-karma": "^0.11.0",
     "jasmine-core": "~2.3.0",
     "karma": "^0.12.36",
-    "karma-chrome-launcher": "^0.1.12",
-    "karma-cli": "0.0.4",
     "karma-coverage": "~0.3.1",
     "karma-jasmine": "~0.3.5",
     "karma-ng-html2js-preprocessor": "^0.1.2",
     "karma-phantomjs-launcher": "~0.1.4",
     "phantomjs": "^1.9.17"
-  },
-  "scripts": {
-    "postinstall": "cd node_modules && git clone https://github.com/chrisgladd/grunt-phantomcss.git && cd grunt-phantomcss && bower install && npm install && cd ../../"
-  },
-  "peerDependencies": {
-    "grunt-phantomcss": "~0.2.3"
   }
 }
