--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-rise",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Rise a lite AngularJS application in minutes",
   "author": "Rafael Camargo <contato@rafaelcamargo.com>",
   "repository": {
@@ -9,11 +9,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "angular": "^1.4.1",
-    "angular-route": "^1.4.1"
+    "angular": "1.4.9",
+    "angular-route": "1.4.9"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.1",
+    "angular-mocks": "1.4.9",
     "grunt": "^0.4.5",
     "grunt-concat-in-order": "^0.1.6",
     "grunt-contrib-copy": "^0.8.0",
