--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "angular": "1.5.11",
     "angular-resource": "1.5.11",
     "angular-ui-router": "0.3.1",
-    "ggrid": "^1.0.0"
+    "clipboard": "^1.7.1",
+    "ggrid": "^1.0.0",
+    "ionicons": "2.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.5.11",
