Changing uglify for babel-minify

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angular-mocks": "1.5.11",
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-angular-templatecache": "2.0.0",
+    "gulp-babel-minify": "^0.2.0",
     "gulp-clean-css": "2.0.10",
     "gulp-concat": "2.6.0",
     "gulp-htmlmin": "3.0.0",
@@ -34,7 +35,6 @@
     "gulp-replace": "0.6.1",
     "gulp-sourcemaps": "2.2.1",
     "gulp-stylus": "2.6.0",
-    "gulp-uglify": "^3.0.0",
     "gulp-webserver": "0.9.1",
     "jasmine-core": "2.4.1",
     "jsdom": "9.9.0",
